# CodeAlpha_IrisIQ

./: .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: .env  Cargo.toml  predictions.db
backend/migrations/: 20260603000000_create_predictions.sql  20260603000001_add_manual_measurements.sql
backend/resources/: model.onnx  model_metadata.json
backend/src/: db.rs  handlers.rs  inference.rs  main.rs  model.rs
frontend/: pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/kotlin/com/irisai/frontend/: MainActivity.kt
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/lib/: main.dart
frontend/lib/core/network/: api_client.dart
frontend/lib/core/routing/: app_router.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/utils/: csv_exporter.dart  csv_exporter_mobile.dart  csv_exporter_stub.dart  csv_exporter_web.dart
frontend/lib/data/models/: history_model.dart  metrics_model.dart  prediction_model.dart
frontend/lib/presentation/providers/: app_state_providers.dart
frontend/lib/presentation/screens/: analytics_screen.dart  history_screen.dart  landing_screen.dart  model_info_screen.dart  predict_screen.dart  result_screen.dart  settings_screen.dart
frontend/lib/presentation/widgets/: flower_painter.dart  glass_container.dart
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
ml/: model.onnx  requirements.txt  train.py  train_vision.py  vision_model.onnx
