[package]
name = "iris-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
actix-cors = "0.7.0"
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
sqlx = { version = "0.8.0", features = ["runtime-tokio", "postgres", "macros", "migrate", "uuid", "chrono"] }
tract-onnx = "0.21.3"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
image = "0.25.1"
uuid = { version = "1.8.0", features = ["v4", "serde"] }
log = "0.4.22"
env_logger = "0.11.3"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
dotenvy = "0.15.7"
